<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>ro.pippo</groupId>
    <artifactId>pippo-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.9.0-SNAPSHOT</version>
    <name>Pippo Parent</name>
    <description>Micro java web framework</description>
    <url>http://pippo.ro</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/decebals/pippo.git</connection>
        <developerConnection>scm:git:https://github.com/decebals/pippo.git</developerConnection>
        <url>git@github.com/decebals/pippo.git</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <servlet.version>3.0.1</servlet.version>
        <slf4j.version>1.7.7</slf4j.version>
        <metrics.version>3.1.1</metrics.version>

        <junit.version>4.12</junit.version>
        <cobertura.version>2.7</cobertura.version>
        <coveralls.version>3.1.0</coveralls.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <optimize>true</optimize>
                    <encoding>UTF-8</encoding>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
                <inherited>true</inherited>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <goals>deploy</goals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>release-@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/java</directory>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <filtering>false</filtering>
                <directory>src/test/resources</directory>
            </testResource>
            <testResource>
                <filtering>false</filtering>
                <directory>src/test/java</directory>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.ocpsoft.prettytime</groupId>
                <artifactId>prettytime</artifactId>
                <version>3.2.5.Final</version>
            </dependency>
            <dependency>
                <groupId>org.kohsuke.metainf-services</groupId>
                <artifactId>metainf-services</artifactId>
                <version>1.7</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>pippo</module>
        <module>pippo-core</module>
        <module>pippo-jetty</module>
        <module>pippo-undertow</module>
        <module>pippo-tjws</module>
        <module>pippo-tomcat</module>
        <module>pippo-freemarker</module>
        <module>pippo-groovy</module>
        <module>pippo-jade</module>
        <module>pippo-pebble</module>
        <module>pippo-trimou</module>
        <module>pippo-spring</module>
        <module>pippo-guice</module>
        <module>pippo-weld</module>
        <module>pippo-gson</module>
        <module>pippo-fastjson</module>
        <module>pippo-jackson</module>
        <module>pippo-jaxb</module>
        <module>pippo-xstream</module>
        <module>pippo-snakeyaml</module>
        <module>pippo-csv</module>
        <module>pippo-metrics</module>
        <module>pippo-metrics-ganglia</module>
        <module>pippo-metrics-graphite</module>
        <module>pippo-metrics-influxdb</module>
        <module>pippo-metrics-librato</module>
        <module>pippo-controller</module>
        <module>pippo-session</module>
        <module>pippo-session-cookie</module>
        <module>maven-archetypes/quickstart</module>
		<module>pippo-velocity</module>
        <module>pippo-less4j</module>
        <module>pippo-sasscompiler</module>
        <module>pippo-test</module>
    </modules>

    <profiles>
        <profile>
            <id>jdk8-build</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <additionalparam>-Xdoclint:none</additionalparam>
            </properties>
        </profile>
        <profile>
            <id>travis</id>
            <activation>
                <property>
                    <name>env.TRAVIS</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>cobertura-maven-plugin</artifactId>
                        <version>${cobertura.version}</version>
                        <configuration>
                            <formats>
                                <format>xml</format>
                            </formats>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.eluder.coveralls</groupId>
                        <artifactId>coveralls-maven-plugin</artifactId>
                        <version>${coveralls.version}</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
